# BlazeHammer

./: README.md  headers.json  main.py  payload.json  payload_example.json  pyproject.toml  requirements.txt
utils/: compare_json.py  custom_file_payload.py  custom_parsers.py  custom_providers.py  random_functions.py  replace_placeholders.py
